--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
     <title>Formulario post</title>
 </head>
 <body>
-    <p>hola</p>
+    <form action="/api/productos" method="post">
+        <input type="text" name="title" placeholder="Título"><br>
+        <input type="text" name="price" placeholder="Precio"><br>
+        <label for="url">Completar la url o subir una foto: </label><br>
+        <input type="text" name="url" placeholder="URL de la imagen"><br>
+        <input type="file" name="thumbnail" placeholder="Imagen"><br>
+        <button type="submit">Enviar</button>
+    </form>
 </body>
 </html>
