--- a/index.html
+++ b/index.html
@@ -19,19 +19,8 @@
         <input type="text" id="thumbnail" name="url" placeholder="URL de la imagen"><br>
         <button type="submit">Enviar</button>
     </form>
-    <div class="well">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Producto</th>
-                    <th>Precio</th>
-                    <th>Thumbnail</th>
-                </tr>
-            </thead>
-            <tbody id="tableBody">
-                
-            </tbody>
-        </table>
+    <div id="listado" class="well">
+        
     </div>
 </body>
 </html>
