Limpieza de código pre desafío 14. Todo funcional.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <input id="mensaje" type="text" placeholder="Mensaje a enviar"/>
         <input type="submit"></input>
     </form>
-    <!-- <div id="listado" class="well">
+    <div id="listado" class="well">
         
-    </div> -->
+    </div>
 </body>
 </html>
